// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Breadcrumb Basic BreadCrumb renders 1`] = `
<React.Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <code
      className="token property"
    >
      .breadcrumb
    </code>
     to a containing 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ol&gt;
    </PrismCode>
     element and nest a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;a&gt;
    </PrismCode>
     or 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;span&gt;
    </PrismCode>
     element inside the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Breadcrumb
      items={
        Array [
          Object {
            "href": "#",
            "title": "Home",
          },
          Object {
            "href": "#",
            "title": "Products",
          },
          Object {
            "href": "#",
            "title": "Gadgets",
          },
          Object {
            "title": "Gadgets #1",
          },
        ]
      }
    />
  </ComponentPreview>
</React.Fragment>
`;

exports[`Documentation: Breadcrumb BreadCrumb Text renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <p
    className="lead"
  >
    Breadcrumbs are a good way to display your current location. This is usually used when you have multiple layers of content.
  </p>
  <BasicBreadCrumb />
  <SmallBreadCrumb />
  <DisabledBreadcrumb />
</div>
`;

exports[`Documentation: Breadcrumb Disabled BreadCrumb renders 1`] = `
<React.Fragment>
  <h2
    id="disable-a-breadcrumb"
  >
    Disable a breadcrumb
  </h2>
  <p>
    To disable a breadcrumb element, add class 
    <code
      className="token property"
    >
      .disabled
    </code>
     to the 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Breadcrumb
      items={
        Array [
          Object {
            "href": "#",
            "title": "Home",
          },
          Object {
            "disabled": true,
            "href": "#",
            "title": "Products",
          },
          Object {
            "href": "#",
            "title": "Gadgets",
          },
          Object {
            "href": "#",
            "title": "Gadgets #1",
          },
        ]
      }
      small={true}
    />
  </ComponentPreview>
</React.Fragment>
`;

exports[`Documentation: Breadcrumb Small BreadCrumb renders 1`] = `
<React.Fragment>
  <h2
    id="small-breadcrumb"
  >
    Small breadcrumb
  </h2>
  <p>
    Add class 
    <code
      className="token property"
    >
      .breadcrumb-sm
    </code>
     to the containing 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ol&gt;
    </PrismCode>
     element for a smaller version of the breadcrumb component.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Breadcrumb
      items={
        Array [
          Object {
            "title": "Home",
          },
          Object {
            "title": "Products",
          },
          Object {
            "title": "Gadgets",
          },
          Object {
            "title": "Gadgets #1",
          },
        ]
      }
      small={true}
    />
  </ComponentPreview>
</React.Fragment>
`;

exports[`Documentation: Breadcrumb renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <BreadcrumbText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
